# middleware

./: .gitignore  .jscsrc  .travis.yml  README.md
docs/api/: freenas10_query_format.rst
docs/developer/middleware/: protocol.rst
nas_ports/databases/mongodb/: Makefile
nas_ports/databases/py-swiftclient/: Makefile
nas_ports/devel/ds2/: Makefile
nas_ports/devel/py-boto3/: Makefile  distinfo
nas_ports/devel/py-botocore/: Makefile  distinfo
nas_ports/devel/py-consul/: Makefile  distinfo  pkg-descr
nas_ports/devel/py-docker/: Makefile  distinfo
nas_ports/devel/py-dockerpty/: Makefile  distinfo  pkg-descr
nas_ports/devel/py-gevent/: Makefile
nas_ports/devel/py-gssapi/: Makefile  distinfo  pkg-descr
nas_ports/freenas/freenas-alertd/: Makefile  pkg-descr  pkg-plist
nas_ports/freenas/freenas-containerd/: Makefile  (+1 more)
src/alertd/: Makefile
src/cli/: d1.diff  dump.cli  factorial.cli  file.txt  fn10.keytab  foo  foo.txt  foobar2.txt  freenas.utils-0.0.0-py2.7.egg  key  nfs.keytab  repl.cli  script.cli  servertest.py  test.cli  test.py  test.txt
src/containerd/: Makefile
src/datastore/: Makefile
src/debugd/: Makefile
src/dispatcher/: Makefile  setup.py  setup_plugins.py
src/dscached/: Makefile
src/etcd/: Makefile
src/fnstatd/: Makefile
src/nss-freenas/: CMakeLists.txt
src/nss-freenas/src/: nss_freenas.c
src/pam-freenas/: CMakeLists.txt
src/pam-freenas/src/: pam_freenas.c
src/py-launch/: setup.py
src/py-mach/: setup.py
src/restd/: Makefile  README.md
tools/: autoupdate_vm_templates.py  dispatcher_rsync_exclude_list.txt  freenasdev
(+570 files in other folders)
